# python-specex

./: .readthedocs.yaml  .travis.yml  README.md  pyproject.toml  redrock_venv_setup.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-and-check.yml  pre-release.yml  tagged-release.yml  test_linux.yml  test_linux_lint.yml
docs/: conf.py  cube.rst  docs.rst  index.rst  installation.rst  lines.rst  plot.rst  requirements.txt  rrspex.rst  spexplot.rst  tutorials.rst  zeropoints.rst
docs/module_docs/: rrspecex.rst  sources.rst  specex.rst  stack.rst  utils.rst
docs/source/: conf.py  index.rst  lines.rst  spex.rst  stack.rst  utils.rst  zeropoints.rst
docs/tutorials/: tut_01_extract_spectra.rst  tut_02_redshift.rst  tut_03_plot_spectra.rst  tut_04_plot_anim.rst  tut_05_datacubes.rst
py/spex/: __init__.py  lines.py  rrspex.py  sources.py  spex.py  spexplot.py  stack.py  utils.py  zeropoints.py
spex/: rrspex.py  sources.py  spex.py  spexplot.py  stack.py  utils.py
src/specex/: cube.py  cubex.py  exceptions.py  lines.py  plot.py  rrspecex.py  sources.py  specex.py  stack.py  utils.py
src/spex/: __init__.py  cube.py  spex.py  spexplot.py  stack.py  utils.py  zeropoints.py
test/: __init__.py  make_synt_cube.py  make_synt_specs.py  test_all.py  test_cubestack.py  test_cutout.py  test_rrspex.py  test_sources.py  test_spex.py  test_spexplot.py  test_zeropointinfo.py
test/data/: make_synt_cube.py  make_synt_specs.py  rrspex_galaxy_00.fits  rrspex_galaxy_01.fits  rrspex_galaxy_02.fits  rrspex_galaxy_03.fits  rrspex_galaxy_04.fits  rrspex_qso_00.fits  rrspex_qso_01.fits  rrspex_qso_02.fits  rrspex_qso_03.fits  rrspex_qso_04.fits  rrspex_star_a_00.fits  rrspex_star_a_01.fits  rrspex_star_a_02.fits  rrspex_star_a_03.fits  rrspex_star_a_04.fits  rrspex_star_b_00.fits  rrspex_star_b_01.fits  rrspex_star_b_02.fits  rrspex_star_b_03.fits  rrspex_star_b_04.fits  rrspex_star_cv_00.fits  rrspex_star_cv_01.fits  rrspex_star_cv_02.fits  rrspex_star_cv_03.fits  rrspex_star_cv_04.fits  rrspex_star_f_00.fits  rrspex_star_f_01.fits  rrspex_star_f_02.fits  rrspex_star_f_03.fits  rrspex_star_f_04.fits  rrspex_star_g_00.fits  rrspex_star_g_01.fits  rrspex_star_g_02.fits  rrspex_star_g_03.fits  rrspex_star_g_04.fits  rrspex_star_k_00.fits  rrspex_star_k_01.fits  rrspex_star_k_02.fits  (+15 more)
