[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spex"
version = "0.4.1"
description = "Extract spectra from fits cubes"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["spectroscopy", "spectra", "spectrum", "spectral cubes"]
authors = [
 {name = "Maurizio D'Addona"},
 {email = "mauritiusdadd@gmail.com"}
]
maintainers = [
 {name = "Maurizio D'Addona"},
 {email = "mauritiusdadd@gmail.com"}
]
classifiers = [
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 3 - Alpha",
        # Indicate who your project is intended for
        "Intended Audience :: Science/Research",
        "Topic :: Multimedia :: Graphics :: Graphics Conversion",
        # Pick your license as you wish (should match "license" above)
        "BSD 3-Clause New or Revised License",
        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
documentation = "https://python-spex.readthedocs.io/en/latest"
repository = "https://github.com/mauritiusdadd/python-spex"

[project.scripts]
spex = "spex.spex:spex"
rrspex = "spex.rrspex:rrspex"
zeropointinfo = "spex.zeropoints:main"
cubestack = "spex.stack:cube_stack"
spexplot = "spex.spexplot:spexplot"
