[metadata]
name = spex
version = attr: spex.__version__
author = Maurizio D'Addona
author_email = mauritiusdadd@gmail.com
url = https://github.com/mauritiusdadd/python-spex
description = Extract spectra from fits cubes
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
keywords = spectroscopy, spectra, spectrum, spectral cubes
classifiers =
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        Development Status :: 3 - Alpha
        # Indicate who your project is intended for
        Intended Audience :: Science/Research
        Topic :: Multimedia :: Graphics :: Graphics Conversion
        # Pick your license as you wish (should match "license" above)
        BSD 3-Clause "New" or "Revised" License
        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    scipy
    astropy
    matplotlib

[options.entry_points]
console_scripts =
    spex = spex.spex:spex
    rrspex = spex.rrspex:rrspex
    zeropointinfo = spex.zeropoints:main
    cubestack = spex.stack:cube_stack
    spexplot = spex.spexplot:spexplot
